Started Termigon Armor

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -509,6 +509,66 @@
               </div>
               <!-- End of Time for Revenge -->
               <div class="line"></div>
+              <!-- Start of Termigon Armor  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="termigonArmor" class="anchor text-center">Termigon Armor</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Burslord
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Darkwoods/Termigon_Armor_Termigon_Battle_Mittens.png" alt="Termigon Battle Mittens" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Termigon_Armor_Termigon_Battle_Mittens_Stats.png' alt='Termigon Battle Mittens'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Termigon_Armor_Burslord.png" alt="Burslord">
+                        After completeing time for revenge speak to <span class="light-red">Burslord</span> at the hunting lodge, Varios in Whisperdale speaks very highly of you. Perhaps you can return to the Termigon hive and do me a service as well.
+                        I am working on a new very strong material to be used in the crafting of armor. The material is only found in the stomach lining of some Termigon Warriors around the hive to the south. Return to the hive and retrieve 20 stomach linings for my work. 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Termigon Armor</span><span class="orange">, Collect 20 stomach linings of Termigon Warriors for Burslord, a huntsmand who lives east of Autumn.</span>
+                        <br>
+                         
+                          <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Termigon Battle Mittens</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">44,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       Burslord gave you Termigon Battle Mittens.  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Termigon Armor -->
               <div class="line"></div>
 
 
