Worked on Termigon Armor Quest

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -56,7 +56,7 @@
                             <a href="#timeForRevenge">Time for Revenge</a>
                         </li>
                         <li>
-                            <a href="#"></a>
+                            <a href="#termigonArmor">Termigon Armor</a>
                         </li>
                         <li>
                             <a href="#"></a>
@@ -157,7 +157,7 @@
                              <li><a class="head" href="#knightOfWhisperdale">Knight of Whisperdale</a></li>
                              <li><a class="head" href="#aShadowRoamsTheLands">A Shadow Roams the Lands</a></li>
                              <li><a class="head" href="#timeForRevenge">Time for Revenge</a></li>
-                             <li><a class="head" href="#"></a></li>
+                             <li><a class="head" href="#termigonArmor">Termigon Armor</a></li>
                              <li><a class="head" href="#"></a></li>
                              <li><a class="head" href="#"></a></li>
                              <li><a class="head" href="#"></a></li>
@@ -552,7 +552,7 @@
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Termigon Armor</span><span class="orange">, Collect 20 stomach linings of Termigon Warriors for Burslord, a huntsmand who lives east of Autumn.</span>
                         <br>
-                         
+                         Head south back to the Termigon Hive and kill <span class="light-red">Termigon Warriors</span>. You will need to kill more then 20, casue you will get a dialogue that says. <span class="green"></span>
                           <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Termigon Battle Mittens</span></li>
