Added more to Termigon Armor Quest

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -549,11 +549,42 @@
                         <img class="npc-img" src="Images/Darkwoods/Termigon_Armor_Burslord.png" alt="Burslord">
                         After completeing time for revenge speak to <span class="light-red">Burslord</span> at the hunting lodge, Varios in Whisperdale speaks very highly of you. Perhaps you can return to the Termigon hive and do me a service as well.
                         I am working on a new very strong material to be used in the crafting of armor. The material is only found in the stomach lining of some Termigon Warriors around the hive to the south. Return to the hive and retrieve 20 stomach linings for my work. 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">OPTION: 1</strong> This sounds too messy....</li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">OPTION: 2</strong> I am too tired to help...</li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">OPTION: 3</strong> I am too hungry to assist you right now...</li>
+                        </ul>
+                        <hr>
+                        <strong class="light-blue">OPTION: 1</strong>
+                        <br>
+                        Need to try ...
+                        <hr>
+                        <strong class="light-blue">OPTION: 2</strong>
+                        <br>
+                        Traveling does make one weary, doesn't it? Ahhh... It is as if I am living my youthful days again! I remember the exhaustion well... Here. Have some pie. Mother never sent me without it! I will see you back soon with those stomach linings, yes?
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Apple Pie Slice</span> <img src="Images/Darkwoods/Apple_Pie_Slice.png" alt="Apple Pie Slice"></li> 
+                        </ul>
+                        
+                        <hr>
+                        <strong class="light-blue">OPTION: 3</strong>
+                        <br>
+                        Need to try ...
+                        <hr>
+
+
+
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Termigon Armor</span><span class="orange">, Collect 20 stomach linings of Termigon Warriors for Burslord, a huntsmand who lives east of Autumn.</span>
                         <br>
-                         Head south back to the Termigon Hive and kill <span class="light-red">Termigon Warriors</span>. You will need to kill more then 20, casue you will get a dialogue that says. <span class="green"></span>
-                          <hr>
+                         Head south back to the Termigon Hive and kill <span class="light-red">Termigon Warriors</span>. You will need to kill more then 20, casue you will get a dialogue that says. 
+                         <span class="green">You try to remove the stomach lining, but it shreds to pieces..</span> When you have successfully removed a stomach you will be updated. <span class="green">You've collect 20 stomach linings for Burslord!</span>
+                         <br>
+                         <span class="green">QUEST RECEIVED:</span><span class="red"> Termigon Armor</span><span class="orange">, you've collect enough material. Return to Burslord at the Hunting Lodge.</span>
+                         <br>
+                         With these Termigon stomach linings he can fashion many pairs of armored gloves! Take these prototype mittens as a reward for your fine service! Now, rest awhile at our fine lodge...
+                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Termigon Battle Mittens</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">44,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
