Fixed qust Received to Update

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -571,17 +571,16 @@
                         <strong class="light-blue">OPTION: 3</strong>
                         <br>
                         Need to try ...
+
+
                         <hr>
-
-
-
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Termigon Armor</span><span class="orange">, Collect 20 stomach linings of Termigon Warriors for Burslord, a huntsmand who lives east of Autumn.</span>
                         <br>
                          Head south back to the Termigon Hive and kill <span class="light-red">Termigon Warriors</span>. You will need to kill more then 20, casue you will get a dialogue that says. 
                          <span class="green">You try to remove the stomach lining, but it shreds to pieces..</span> When you have successfully removed a stomach you will be updated. <span class="green">You've collect 20 stomach linings for Burslord!</span>
                          <br>
-                         <span class="green">QUEST RECEIVED:</span><span class="red"> Termigon Armor</span><span class="orange">, you've collect enough material. Return to Burslord at the Hunting Lodge.</span>
+                         <span class="green">QUEST UPDATE:</span><span class="red"> Termigon Armor</span><span class="orange">, you've collect enough material. Return to Burslord at the Hunting Lodge.</span>
                          <br>
                          With these Termigon stomach linings he can fashion many pairs of armored gloves! Take these prototype mittens as a reward for your fine service! Now, rest awhile at our fine lodge...
                          <hr>
