Added Images and more dialogue to Termigon Armor

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -487,7 +487,7 @@
                         <br>
                          Head east across the river then south around the mountain. This is the Termigon hive. Find the <span class="light-red">Termigon Queen</span> 
                          <br>
-                         <img class="monster-img" src="Images/NPC/Monsters/Termigon_Queen.png" alt="Termigon Queen"> with in this area and kill it.
+                         <img class="monster-img" src="Images/NPC/Monsters/Termigon_Queen.png" alt="Termigon Queen"> with in this area and kill it. There is a chance you won't find the timepiece when you kill the queen <span class="light-blue">You search the body, but don't find anything.</span>
                          <br>
                          <span class="green">QUEST UPDATE:</span><span class="red"> Time for Revenge</span><span class="orange">, You found Varios's Timepiece! Return it to him in Whisperdale.</span>
                          <br>
@@ -558,20 +558,26 @@
                         <hr>
                         <strong class="light-blue">OPTION: 1</strong>
                         <br>
-                        Need to try ...
+                        Nonsense. There is usually nothing in the stomachs! They regurgitate it to their horrid little larval spawn. Oh, what was I saying? Yes... to remove the lining simply cut a small hole in the stomach once you remove it...
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: ???</span> <img src="Images/Darkwoods" alt="???"></li> 
+                        </ul>
+                        
                         <hr>
                         <strong class="light-blue">OPTION: 2</strong>
                         <br>
                         Traveling does make one weary, doesn't it? Ahhh... It is as if I am living my youthful days again! I remember the exhaustion well... Here. Have some pie. Mother never sent me without it! I will see you back soon with those stomach linings, yes?
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Apple Pie Slice</span> <img src="Images/Darkwoods/Apple_Pie_Slice.png" alt="Apple Pie Slice"></li> 
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Apple Pie Slice</span> <img src="Images/Darkwoods/Termigon_Armor_Apple_Pie_Slice.png" alt="Apple Pie Slice"></li> 
                         </ul>
                         
                         <hr>
                         <strong class="light-blue">OPTION: 3</strong>
                         <br>
-                        Need to try ...
-
+                        Well, we can't have you off adventuring on a nempty stomach! <span class="orange">*He produces a steaming bowl of beef stew*</span> There now, this should help. I will see you back soon with those stomach linings, yes?
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Beef Stew</span> <img src="Images/Darkwoods/Termigon_Armor_Beef_Stew.png" alt="Beef Stew"></li> 
+                        </ul>
 
                         <hr>
                         <br>
