--- a/quest.html
+++ b/quest.html
@@ -171,7 +171,7 @@
             <div class="line"></div>
             <h3 id="darkwoods" class="anchor">Darkwoods</h3>
             <p>Comeing Soon</p>
-            <button type="button" class="btn btn-dark"><a href="#">Darkwoods</a></button>
+            <button type="button" class="btn btn-dark"><a href="darkWoods.html">Darkwoods</a></button>
 
             <div class="line"></div>
             <h3 id="battlePlains" class="anchor">Battle Plains</h3>
