--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -1353,7 +1353,7 @@
                         </thead>    
                         </tr>
                         <tr>
-                          <td>Apprentice</td>
+                          <td>Adept</td>
                           <td>Combat</td>                        
                     </table>
                     <table class="table table-sm table-bordered text-center">
