--- a/darkWoods.html
+++ b/darkWoods.html
@@ -59,7 +59,7 @@
                             <a href="#termigonArmor">Termigon Armor</a>
                         </li>
                         <li>
-                            <a href="#"></a>
+                            <a href="#correspondence">Correspondence</a>
                         </li>
                         <li>
                           <a href="#"></a>
@@ -584,7 +584,7 @@
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Termigon Armor</span><span class="orange">, Collect 20 stomach linings of Termigon Warriors for Burslord, a huntsmand who lives east of Autumn.</span>
                         <br>
-                         Head south back to the Termigon Hive and kill <span class="light-red">Termigon Warriors</span>. You will need to kill more then 20, casue you will get a dialogue that says. 
+                         Head south back to the Termigon Hive and kill <span class="light-red">Termigon Warriors</span>.<img class="monster-img" src="Images/NPC/Monsters/Termigon_Warrior.png" alt="Termigon Warrior"> You will need to kill more then 20, casue you will get a dialogue that says. 
                          <span class="green">You try to remove the stomach lining, but it shreds to pieces..</span> When you have successfully removed a stomach you will be updated. <span class="green">You've collected 20 stomach linings for Burslord!</span>
                          <br>
                          <span class="green">QUEST UPDATE:</span><span class="red"> Termigon Armor</span><span class="orange">, you've collect enough material. Return to Burslord at the Hunting Lodge.</span>
@@ -607,6 +607,130 @@
               </div>
               <!-- End of Termigon Armor -->
               <div class="line"></div>
+              <!-- Start of Correspondence  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="correspondence" class="anchor text-center">Correspondence</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Traveling</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Jarkam
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/correspondence_Gold_250.png' alt='Gold 250'>">
+
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Correspondence_Jarkam.png" alt="Jarkam"> 
+                        Speak to <span class="light-red">Jarkam</span>, I must get this note to the miner in Fort Eastwatch. Deliver it to him and he will pay you well... Ask him why The ore from Krythan island is superio to that found on our native soil, the Darkwoods. I want
+                        to make a deal with the miner to purchase his ore so I can sell it here. Between you and me, it would not be a small markup. If only i was able to travel there myself... but I cannot. The portal magic is strong and leaves me feeling quite ill.
+                        Say that you will deliver his note for a small markup.. Splendid! Things are going just as planned... Here is your payment do not abuse my trust! Go at once.
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">GOLD RECEIVED: 250</span></li>
+                        </ul>
+                        <hr>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Correspondence</span><span class="orange">, Jarkam of Whisperdale paid you to deliver a note to the Dalvon Miner at Fort Eastwatch.</span>
+                    </p>
+                    <p class="clearfix">    
+                      <img class="npc-img" src="Images/Darkwoods/Correspondence_Dalvon_Miner.png" alt="Dalvon Miner">
+                        Travel to LSP portal, then to Silvest Portal at LSP. Travel all the way to the eastside to Fort Eastwatch. There you will find the <span class="light-red">Dalvon Miner</span>. Talk to him to give him the note.
+                         WHAT? He thinks he can buy my ore at such a low price? If he only knew the problems I have at the mine!
+                         <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">16,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You delivered a note to the Dalvon Miner.  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Correspondence -->
+              <div class="line"></div>
+              <!-- Start of Foul Beasts  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="correspondence" class="anchor text-center">Foul Beasts</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Traveling</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Jarkam
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/correspondence_Gold_250.png' alt='Gold 250'>">
+
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Foul_Beasts_Periza.png" alt="Periza"> 
+                        Speak to <span class="light-red">Jarkam</span>, You're new here aren't you? Have you ever heard of Wargs? Foul beasts they are... Several of them came into town and devoured my chickens. If you would be so kind as to venture into the wilderness and extract some
+                        vengeance for me I would be most grateful. Answer:<span class="light-green"> "They are MOST foul! I will hunt them.</span> MOST foul, indeed. I might have a nice reward waiting for you if you do the job well...  
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Foul Beasts</span><span class="orange">, Wargs near Whisperdale are eating Periza's chickens! Hunt 50 of them..</span>
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">16,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You delivered a note to the Dalvon Miner.  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Foul Beasts -->
+              <div class="line"></div>
+
 
 
 
