Completed Foul Beasts Quest

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -62,7 +62,7 @@
                             <a href="#correspondence">Correspondence</a>
                         </li>
                         <li>
-                          <a href="#"></a>
+                          <a href="#foulBeasts">Foul Beasts</a>
                         </li>
                         <li>
                           <a href="#"></a>
@@ -158,7 +158,7 @@
                              <li><a class="head" href="#aShadowRoamsTheLands">A Shadow Roams the Lands</a></li>
                              <li><a class="head" href="#timeForRevenge">Time for Revenge</a></li>
                              <li><a class="head" href="#termigonArmor">Termigon Armor</a></li>
-                             <li><a class="head" href="#"></a></li>
+                             <li><a class="head" href="#foulBeasts">Foul Beasts</a></li>
                              <li><a class="head" href="#"></a></li>
                              <li><a class="head" href="#"></a></li>
                              <li><a class="head" href="#"></a></li>
@@ -676,7 +676,7 @@
               <!-- Start of Foul Beasts  -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
-                  <h2 id="correspondence" class="anchor text-center">Foul Beasts</h2>
+                  <h2 id="foulBeasts" class="anchor text-center">Foul Beasts</h2>
                 </div>
                 <div>
                   <div class="card-body">
@@ -689,7 +689,7 @@
                         </tr>
                         <tr>
                           <td>Apprentice</td>
-                          <td>Traveling</td>                        
+                          <td>Combat</td>                        
                     </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
@@ -700,23 +700,39 @@
                         </tr>
                         <tr>
                           <td>
-                            Jarkam
+                            Periza
                           </td>
                           <td>
-                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/correspondence_Gold_250.png' alt='Gold 250'>">
-
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Foul_Beasts_Gold_500.png' alt='Gold 500'>">
+                            <img class="thumbnail-img" src="Images/Darkwoods/Foul_Beasts_Warge_Eye_Amulet.png" alt="Warge Eye Amulet" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Foul_Beasts_Warg_Eye_Amulet_Stats.png' alt='Warg Eye Amulet Stats'>">
                           </td>                        
                     </table>
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/Darkwoods/Foul_Beasts_Periza.png" alt="Periza"> 
-                        Speak to <span class="light-red">Jarkam</span>, You're new here aren't you? Have you ever heard of Wargs? Foul beasts they are... Several of them came into town and devoured my chickens. If you would be so kind as to venture into the wilderness and extract some
+                        Speak to <span class="light-red">Periza</span>, You're new here aren't you? Have you ever heard of Wargs? Foul beasts they are... Several of them came into town and devoured my chickens. If you would be so kind as to venture into the wilderness and extract some
                         vengeance for me I would be most grateful. Answer:<span class="light-green"> "They are MOST foul! I will hunt them.</span> MOST foul, indeed. I might have a nice reward waiting for you if you do the job well...  
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Foul Beasts</span><span class="orange">, Wargs near Whisperdale are eating Periza's chickens! Hunt 50 of them..</span>
+                        <br>
+                        You have to kill the Wargs in a cretin location within the DarkWoods. If you speak to her again she will give you the hint of were to find them. 
+                        <br> 
+                        A pack of wargs live in the mountains to the northeast. They come down to feast on my birds when their game is poor. From what I overheard at the tavern; hunters say they prefer the flesh of brown bear cubs. Maybe if you kill a few of those, the wargs will catch the sent
+                        and show themselves...
+                    </p>
+                    <p class="clearfix">    
+                        <img class="npc-img" src="Images/NPC/Monsters/Warg.png" alt="Warg">
+                        <img class="npc-img" src="Images/NPC/Monsters/Brown_Bear_Cub.png" alt="Brown Bear Cub">
+                        Follow the road to the north at the fork head northeast. This area around the south side of the mountain you can find Wargs, and brown bears to kill to get them to spawn more offten. As you kill them you will be updated <span class="green">QUEST UPDATE: You've killed 50 wargs for Periza.</span>
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Foul Beasts</span><span class="orange">, Return to Periza in Whisperdale.</span>
+                        <br>
+                        Return to Periza; I haven't seen a warg around here in ages! You took care of the problem... Here is the reward I promised.
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">16,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">GOLD RECEIVED: 500 Gold</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Warg Eye Amulet</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">11,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr> 
                         
