Added New Images and Completed Quest Loyal

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -65,7 +65,7 @@
                           <a href="#searchForJhulara">Search for Jhulara</a>
                         </li>
                         <li>
-                          <a href="#"></a>
+                          <a href="#loyal">Loyal</a>
                         </li>
                         <li>
                           <a href="#"></a>
@@ -155,7 +155,7 @@
                              <li><a class="head" href="#aShadowRoamsTheLands">A Shadow Roams the Lands</a></li>
                              <li><a class="head" href="#timeForRevenge">Time for Revenge</a></li>
                              <li><a class="head" href="#foulBeasts">Foul Beasts</a></li>
-                             <li><a class="head" href="#"></a></li>
+                             <li><a class="head" href="#loyal">Loyal</a></li>
                              <li><a class="head" href="#"></a></li>
                              <li><a class="head" href="#"></a></li>
                              <li><a class="head" href="#"></a></li>
@@ -881,6 +881,74 @@
                 </div>
               </div>
               <!-- End of A Message for Zarowyn -->
+              <div class="line"></div>
+              <!-- Start of Loyal  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="loyal" class="anchor text-center">Loyal</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Zerev
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Darkwoods/Loyal_Totem_of_the_Wolf_Pup.png" alt="Totem of the Wolf Pup" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/Loyal_Totem_of_the_Wolf_Pup_Stats.png' alt='Totem of the Wolf Pup Stats'>">
+                          </td>                        
+                    </table>
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/Loyal_Zerev.png" alt="Zerev"> 
+                        Speak to <span class="light-red">Zerev</span>, Oh, hello... <span class="orange">*The boy stares solemnly at you*</span> You do not look like you are from here. <span class="light-green">i'm from across the sea.</span> Ho? I wish I could go across the sea... It is so sad here. The ones that die want 
+                        to stay dead but rise again. The ones taht we want to see again we cannot bring back. <span class="light-green">What do you mean?</span> My dog Allie died. She got bit by a black adder, and we couldn't save her. <span class="orange">*His lip quivers*</span> Father said we canot pay the mage to resurrect her. 
+                        It costs too much and our leather shop does not make good coin. <span class="orange">*He bites his lip*</span> So we buried her out in the woods with the other pets. By now she is probably wandering the woods as a skeletal pup. Could you find her? I know she's gone, but I hate to think of her hurting people.
+                        <span class="light-green">Of course. I will find the dog.</span> Thank you... Just look for one with a collar. She found something one day digging outside of town, so I hung it on her neck.
+                          <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Loyal</span><span class="orange">, Zerev's dog is now wandering the woods near Whisperdale as a skeletal pup. Put her to rest.</span>
+                    </p>
+                    <p class="clearfix"> 
+                      <img class="npc-img" src="Images/NPC/Monsters/Skeletal_Pup" alt="Skeletal Pup"> 
+                        Venture out of Whisperdale to the northwest near the coast. There is a small random spawn of <span class="light-red">Skeletal Pups</span> you may have to kill other monsters to get them to spawn. When you start to kill them you will be updated with a message. <span class="light-blue">This Skeletal Pup doesn't have anything on its neck...</span>
+                        When you do kill the correct one you will be updated. <span class="green">QUEST UPDATE: A large totem hangs around this Skeletal Pup's neck. It must be Zerev's dog Allie.</span>
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Loyal</span><span class="orange">, You found what was left of Zerev's dog Allie. Return to him in Whisperdale..</span>
+                        <br>  
+                        You did find her, after all... I was hoping you wouldn't, but taht thing around her neck - that proves it. You keep it. It reminds me of her too much.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Totem of the Wolf Pup</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">22,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You found Zerev's dog Allie, resurrected as a Skeletal Pup. He gave you her Totem of the Wolf Pup.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Loyal -->
               <div class="line"></div>
 
 
