Updated Patch Notes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,27 @@
 
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 8/4/2021</small>
+              <strong>Hotfix</strong>
+              <p>
+                  <ul>
+                    <li>Corrected Yes/No boxes so that ESC counts as not a yes (NO)</li>
+                    <li>Fix for Mining Dark Ore and Gold Ore in TR lands</li>
+                    <li>Can now access follower inventory feature for Ancient Follower (Blad of the Ancients) and Marrowsucker (Totem of Sabal's Children)</li>
+                    <li>Fixed visibility of guard type NPCs inside Lotor's Castle during KoT event (were making players go wanted for attacking one another)</li>
+                    <li>LK Knight quests available once again</li>
+                    <li>Corrected aggro generation on Laughing Blade special</li>
+                    <li>Can continue to harvest Fire Elemental Cores after you have harvested 1 (in case it gets destroyed)</li>
+                    <li>Added fail text on Nasif's quest to find Magnetic Resonator so players know they havce found the correct creature to hunt</li>
+                    <li>Corrected quest dialogue for William the Younger which gives misleading info about what creatures you will expect to find in the Silvest Mine</li>
+                    <li>Reduced skill needed to skin Titan hides to 50 from 85</li>
+                    <li>Increased chance to get Titan Hides to 1 in 4 from 1 in 10</li>
+                    <li>Now get experience for enchanting Talenite/Thrallenite</li>
+                  </ul>
+              </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 7/10/2021</small>
               <strong>Patch</strong>
               <p>
